--- a/src/main/openshift/service-greeter.yaml
+++ b/src/main/openshift/service-greeter.yaml
@@ -10,3 +10,7 @@ spec:
           env:
             - name: TARGET
               value: "Quarkus Sample v1"
+  traffic:
+    - tag: v1
+      revisionName: helloworld-java-r9s2m
+      percent: 100
